[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
bson = "2.7.0"

[dependencies.mongodb]
version = "2.7.1"
default-features = false
features = ["async-std-runtime"]